# IC_project3

./: Fcm.cpp  README.md  fcm.cpp  fcm.h
AllLanguages/: bulgarian.txt  french.txt  portuguese.txt
MoreLanguages/: danish.txt  dutch.txt  english.txt  finnish.txt  french.txt  german.txt  greek.txt  italian.txt  portuguese.txt  spanish.txt  swedish.txt
ioFiles/: testInput1.txt  testInput2.txt  testOutput1.txt  testOutput2.txt
languages/Bulgarian/: BULG1.txt
languages/English/: english.txt  english2.txt  english3.txt
languages/German/: german.txt
languages/Italian/: italian.txt
languages/Polish/: polish.txt
languages/Portuguese/: fernadoPessoa.txt  lusiadasCanto1.txt
src/: Fcm.cpp  Fcm.h
tests/: CMakeLists.txt  findLang.cpp  lang.cpp  locateLang.cpp  testFCM.cpp
tests-bin/: alvaroDeCampos.txt  findLang  lang  locateLang  locateLangOutput.txt  locateLangOutput_o5_s01_t3.txt  locateLangOutput_o7_s05_t3.txt  model.txt  multLanguages  multLanguages.txt  out.txt  outFile.txt  outFile.utf8  simple.txt  test.txt  testFCM  testInput.txt  testOutput1.txt
